<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/ln_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <com.crewcloud.apps.crewapproval.view.RoundedLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft">

            <ImageView
                android:id="@+id/img_avatar"
                android:layout_width="@dimen/setting_page_icon"
                android:layout_height="@dimen/setting_page_icon"
                android:adjustViewBounds="true" />
        </com.crewcloud.apps.crewapproval.view.RoundedLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:text="@string/profle"
            android:textSize="@dimen/setting_tv_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="@color/gray_light"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ln_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.crewcloud.apps.crewapproval.view.RoundedLayoutCircle
            android:layout_width="@dimen/setting_page_icon_under"
            android:layout_height="@dimen/setting_page_icon_under"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/menuleft_ic_setting_white" />
        </com.crewcloud.apps.crewapproval.view.RoundedLayoutCircle>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:text="@string/Generalsettings"
            android:textSize="@dimen/setting_tv_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="@color/gray_light" />

    <LinearLayout
        android:id="@+id/ln_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">


        <com.crewcloud.apps.crewapproval.view.RoundedLayoutCircle
            android:layout_width="@dimen/setting_page_icon_under"
            android:layout_height="@dimen/setting_page_icon_under"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/add_btn_alarm" />
        </com.crewcloud.apps.crewapproval.view.RoundedLayoutCircle>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:text="@string/notify_setting"
            android:textSize="@dimen/setting_tv_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="@color/gray_light" />

    <LinearLayout
        android:id="@+id/ln_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">


        <com.crewcloud.apps.crewapproval.view.RoundedLayoutCircle
            android:layout_width="@dimen/setting_page_icon_under"
            android:layout_height="@dimen/setting_page_icon_under"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:background="@color/colorPrimary">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/setting_ic_logout" />
        </com.crewcloud.apps.crewapproval.view.RoundedLayoutCircle>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/setting_mgleft"
            android:text="@string/logout"
            android:textSize="@dimen/setting_tv_size" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/setting_mgtop"
        android:background="@color/gray_light" />

</LinearLayout>
